# slint-template

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.cargo/: config.toml
apps/: CMakeLists.txt  MyButton.slint  hello.slint  main.cpp  main_win.cpp  styles.slint
toolchains/: llvm-linux-arm64.cmake  llvm-linux-x64.cmake  llvm-win-arm64.cmake  llvm-win-x64.cmake  osxcross-macos-arm64.cmake  osxcross-macos-x64.cmake
