if(WIN32)
    add_executable(main main_win.cpp)
    set_property(TARGET main PROPERTY WIN32_EXECUTABLE TRUE)
else()
    add_executable(main main.cpp)
endif()
set_property(TARGET main PROPERTY SLINT_EMBED_RESOURCES embed-files)
slint_target_sources(main hello.slint)
target_link_libraries(main PRIVATE Slint::Slint)
macro(copy_helper filename)
    if(ANDROID)
        set(outdir ${CMAKE_SOURCE_DIR}/gradle/app/src/main/assets)
    else()
        set(outdir ${CMAKE_BINARY_DIR}/apps)
    endif()
    file(COPY "${CMAKE_CURRENT_LIST_DIR}/${filename}" DESTINATION "${outdir}")
endmacro()
if(NOT EMSCRIPTEN)
    copy_helper("Ghostscript_Tiger.svg")
endif()
